tests/fixtures/errors/param_default_dotted_out_mismatch.z
# E0100: a dotted-literal param default (0.u64) declares u64 -- the body
# read is strictly typed, so returning it under 'out i64' mismatches.
padw: function {width: 0.u64} out i64 is {
    return width
}

main: function is {
    print "\{padw}"
}
